0042: Fix shop/inventory overflow, add dark mode on larrys freebies, fix css on map preview

--- a/css/main.css
+++ b/css/main.css
@@ -234,24 +234,6 @@ body .pageFrameView *::-webkit-scrollbar-thumb:hover {
     z-index: 96;
 }
 
-/* shop */
-
-.pageFrameView .mousehuntHud-page-subTabContent.active {
-    overflow: hidden;
-}
-
-.pageFrameView .MHCheckoutRootView-pageContainer {
-    background: var(--mhdm-lbrown)
-}
-
-.pageFrameView .MHCheckoutRootView-footer {
-    background: var(--mhdm-lbrown)
-}
-
-.pageFrameView #overlayPopup .jsDialogContainer .suffix {
-    background: var(--mhdm-brown)
-}
-
 /* mice list */
 
 .pageFrameView .mouseListView-categoryContent-category {
@@ -262,4 +244,28 @@ body .pageFrameView *::-webkit-scrollbar-thumb:hover {
     display: none;
 }
 
-/* friends */
+
+/* claim gift */
+
+.pageFrameView .PageClaimGift {
+    background-color: var(--mhdm-mainDark);
+}
+
+.pageFrameView .PageClaimGift .mousehuntPage-content {
+    padding: 0 10px;
+
+}
+
+.pageFrameView .PageClaimGift .claimGiftPage__body::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--mhdm-dimming-filter2);
+    pointer-events: none;
+    z-index: 96;
+}
